Add links in talks

--- a/talks/index.html
+++ b/talks/index.html
@@ -60,11 +60,11 @@
 
 <h2 id="the-improvement-and-enhancement-of-goa-tchssk-github-io-goastudy"><a href="//tchssk.github.io/goastudy/">The improvement and enhancement of goa</a></h2>
 
-<p>2017/06/17 #goastudy</p>
+<p>2017/06/17 <a href="https://istyle.connpass.com/event/57455/">#goastudy</a></p>
 
 <h2 id="how-i-create-a-microservice-using-goa-tchssk-github-io-goadesigntokyo"><a href="//tchssk.github.io/goadesigntokyo/">How I create a Microservice using goa</a></h2>
 
-<p>2016/09/06 #goadesigntokyo</p>
+<p>2016/09/06 <a href="https://connpass.com/event/36964/">#goadesigntokyo</a></p>
 
   </div>
 </section>
