--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
   
   
   
+  <a href="https://gitlab.com/tchssk" aria-label="Gitlab" target="_blank"><i class="fab fa-gitlab" aria-hidden="true"></i></a>
+  
   
   
   
