--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
   <a href="https://medium.com/@tchssk" aria-label="Medium" target="_blank"><i class="fab fa-medium" aria-hidden="true"></i></a>
   
   
+  <a href="https://dev.to/tchssk" aria-label="Dev.to" target="_blank"><i class="fas fa-terminal" aria-hidden="true"></i></a>
+  
   
   
   
