--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
   
   
   
+  <a href="https://news.ycombinator.com/user?id=tchssk" aria-label="Y Combinator Hackernews" target="_blank"><i class="fab fa-hacker-news" aria-hidden="true"></i></a>
+  
   
   
   
