--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
   <a href="https://gitlab.com/tchssk" aria-label="Gitlab" target="_blank"><i class="fab fa-gitlab" aria-hidden="true"></i></a>
   
   
+  <a href="https://bitbucket.org/tchssk" aria-label="Bitbucket" target="_blank"><i class="fab fa-bitbucket" aria-hidden="true"></i></a>
+  
   
   
   
