--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 <section id="main-menu-pane" class="row text-center main-menu">
   
-  <h4><a class="menu-item" href="http://tchssk.hatenablog.com/">blog</a></h4>
+  <h4><a class="menu-item" href="https://tchssk.hatenablog.com/">blog</a></h4>
   
   <h4><a class="menu-item" href="/talks/">talks</a></h4>
   
