--- a/talks/index.html
+++ b/talks/index.html
@@ -91,6 +91,10 @@
   
   
   
+  <span><a class="menu-item" href="/"></a></span>
+  
+  
+  <span><a class="menu-item" href="https://tchssk.github.io/apps/"> | next &gt;</a></span>
   
   
   <h4 class="text-center"><a class="menu-item" href="https://tchssk.github.io/">home</a></h4>
