Add Character Viewer to apps

--- a/apps/index.html
+++ b/apps/index.html
@@ -62,6 +62,8 @@
     
     <h2 id="tagiron-memotchsskgithubiotagiron-memo"><a href="//tchssk.github.io/tagiron-memo/">TAGIRON Memo</a></h2>
 <p>A web application for TAGIRON.</p>
+<h2 id="character-viewertchsskgithubiocharacter-viewer"><a href="//tchssk.github.io/character-viewer/">Character Viewer</a></h2>
+<p>A minimal character viewer.</p>
 
   </div>
 </section>
