--- a/404.html
+++ b/404.html
@@ -2,15 +2,12 @@
 <html lang="en-US">
 <head>
 
-<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <meta name="description" content="A web developer who loves Ginger Ale.">
 <meta name="keywords" content="developer,programmer,web,golang,goa">
-
-<base href="https://tchssk.github.io/">
 
 <title>
   Taichi Sasaki - 404 Page not found 
@@ -20,9 +17,9 @@
 
 
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto+Slab:400,700|Roboto:300,300i,400,400i,500,500i,700,700i">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.0/css/all.css" integrity="sha384-XLYVh3ZsmvjnjODXg/qvDYjcINmPLORACP+Tk6qA3jNLbStl84PzAeEz2Su02511" crossorigin="anonymous">
 <link rel="stylesheet" href="https://tchssk.github.io/css/main.css">
 <link rel="stylesheet" href="https://tchssk.github.io/css/custom.css">
 
@@ -41,14 +38,14 @@
 <div class="container">
 
 
-<section id="error-pane" class="row text-center error">
+<section id="error-pane" class="text-center error">
   <h1 class="text-center">404</h1>
   <p>Sorry! That page does not exist. It may have been removed or moved to a new section on the site. Click <a href="/">here</a> go back to the home page.</p>
 </section>
 
 
 
-<footer class="row text-center footer">
+<footer class="text-center footer">
   <hr />
   
   <h6 class="text-center copyright">© 2023 Taichi Sasaki.</h6>
@@ -70,8 +67,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
-<script src="js/custom.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/custom.js"></script>
 </body>
 </html>
 
